implemented new Home added counters implemented User selection
