# sf.Server/Models/SF/CampaignManager.cs
@@ -3,7 +3,7 @@
 public class CampaignManager : User, ISchoolReference
 {
     [JsonProperty("schoolId")]
-    public new Guid SchoolId { get; set; }
+    public new Guid? SchoolId { get; set; }
     
     [ForeignKey(nameof(SchoolId)), JsonIgnore]
     public new School? School { get; set; }
